# tasso

./: Cargo.toml
backend/: Cargo.toml
backend/src/models/: mod.rs  positions.rs  team.rs  team_member.rs  types.rs  user.rs
backend/src/models/fixtures/: team_members.sql  teams.sql  users.sql
crates/backend/: Cargo.toml
crates/backend/migrations/: 20220916195605_base_schema.sql
crates/backend/src/: main.rs
crates/backend/src/models/: mod.rs  positions.rs  resource.rs  scheduled_position.rs  team.rs  team_member.rs  user.rs
crates/backend/src/models/fixtures/: positions.sql  scheduled_positions.sql
crates/resource/: Cargo.toml
crates/resource/src/: lib.rs
crates/resource_derive/: Cargo.toml
crates/resource_derive/src/: lib.rs
