[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
anyhow = "1.0.65"
async-trait = "0.1.57"
chrono = { version = "0.4.22", features = ["serde"] }
env_logger = "0.9.1"
lazy_static = "1.4.0"
log = "0.4.17"
orion = { version = "0.17.2", features = ["serde"] }
pwgen = "0.1.3"
regex = "1.6.0"
serde = { version = "1.0.144", features = ["derive"] }
sqlx = { version = "0.6.2", features = ["migrate", "postgres", "runtime-actix-rustls", "chrono", "offline"] }
sqlx-rt = { version = "0.6.2", features = ["runtime-actix-rustls"] }
validator = { version = "0.16.0", features = ["derive"] }
