[package]
name = "resource"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.57"
chrono = "0.4.22"
quote = "1.0.21"
sqlx = "0.6.2"
syn = "1.0.100"
resource_derive = { path = "../resource_derive" }
